# The-Portman

./: .env  .gitignore  BACKEND_TESTING_REPORT.md  CLEANUP_REPORT.md  CONTRIBUTING.md  FRONTEND_BUILD_STATUS.md  FRONTEND_PROGRESS.txt  INTEGRATION_STATUS.md  LICENSE  MODERN_BACKEND_ARCHITECTURE.md  MODERN_BACKEND_COMPLETE.md  NETLIFY_DEPLOYMENT.md  New Text Document.txt  PORTMAN.txt  PORTMAN_PROJECT_OVERVIEW.txt  PROGRESS.md  PROGRESS_FRONTEND.md  README.md  VERCEL_DEPLOYMENT.md  check_data.py  cleanup_project.bat  comprehensive_api_test.py  comprehensive_test.py  deploy-netlify.bat  docker-compose.production.yml  integration_test.js  netlify.toml  netlify.toml.backup  package-lock.json  package.json  portman.db  problem.txt  setup_portman.bat  setup_vercel.bat  start_development.bat  start_modern_backend.bat  start_portman_dev.bat  start_servers.bat  test.db  test_api.js  (+7 more)
ai-services/: README.md
ai_services/: README.md  cv_ai.py  vector_rag.py
backend/: .env  .env.example  README.md  README_MODERN.md  add_columns.py  add_message_column.py  additional_endpoints.py  advanced_rag.py  alembic.ini  analytics.py  ats_resume.py  auth_utils.py  check_admin.py  check_columns.py  check_schema.py  check_supabase.py  check_users.py  create_admin.py  create_tables.py  create_test_data.py  cv.py  cv_utils.py  database.py  debug_login.py  final_test.py  health_check.py  logs.py  main.py  migrate_db.py  models.py  portfolio.py  portman.db  professional_analysis.py  pyproject.toml  rag_utils_fixed.py  recreate_admin.py  requirements.txt  requirements_modern.txt  run.py  setup_users.py  (+17 more)
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  cv_analysis.py  portfolios.py  users.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  cv_analysis.py  portfolio.py  user.py
backend/app/schemas/: __init__.py  cv_analysis.py  user.py
backend/app/services/: __init__.py  cv_analysis_service.py  user_service.py
backend/generated_resumes/: ats_20250607_133352.docx
backend/legacy_ai_utils/: cv_utils.py  rag_utils.py  rag_utils_new.py  rag_utils_old.py
database/: README.md
docs/: README.md
dump/: README.md  [...nextauth].ts  register.ts
frontend/: deploy.bat  deploy.sh  download_icons.py  eslint.config.mjs  next.config.ts  package-lock.json  (+3 more)
(+240 files in other folders)
